- Fixed bad parsing of '/content()' selector (AttoParser) in some scenarios, leading to suboptimal execution of
  this type of fragment selection.
- Fixed prevent fragments without a signature being called with unnamed parameters.
- Added allow template suffix to be applied only if template name doesn't already have a known file extension.
- Updated AttoParser dependency to 2.0.4.RELEASE.


3.0.5
=====
- Fixed bad interaction of literal parsing in javascript inlining introduced in 3.0.4, causing inlined expressions
  containing literals ('...') to not be adequately parsed, and therefore not executed at all.


3.0.4
=====
- Fixed possible bad parsing of comment start/end delimiters in JavaScript and CSS inlining when the 2K buffer
  used at the Text Parser happened to end in the middle of a JavaScript/CSS text literal.
- Fixed bad behaviour of th:remove="all-but-first" in combination with a th:each on a zero-element collection.
- Fixed custom HTML5 elements with no suffix in their names ("<tag->", which are allowed by the Custom
  Element spec) provoking an exception.
- Improved startup times at the template engine by means of lazy initialization of dialect artifacts.
- Added '/content()' selector to Markup Selector syntax so that the whole contents of a fragment can be
  selected, excluding the matched tag.
- Updated AttoParser dependency to 2.0.3.RELEASE.


3.0.3
=====
- Fixed empty comments (<!---->) not being properly parsed and recognised (AttoParser).
- Fixed text parser wrongly recognizing comment start prefixes ('/*') even if inside JavaScript/CSS literals.
- Fixed #numbers.sequence(from,to) throwing an exception if from > to (bad computation of 'step' argument).
- Fixed OGNL expressions calling the 'hashCode()' method instead of accessing a public 'code' property.
- Improved JavaScript serialization: allow Jackson to (optionally) serialise JSR310 dates as ISO8601
- Improved cache monitoring: published counters and added hit/miss ratios.